[gd_scene load_steps=3 format=3 uid="uid://sqa0g712xqea"]

[ext_resource type="Script" path="res://main/gui.gd" id="1"]
[ext_resource type="LabelSettings" uid="uid://cdlj1jofg5kij" path="res://main/gui_label_settings.tres" id="2_a0u2f"]

[node name="GUI" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "+ machine"
label_settings = ExtResource("2_a0u2f")
horizontal_alignment = 1
uppercase = true

[node name="Button1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Campaign"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sandbox"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
